<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#412442"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#004C1157"
        android:fontFamily="@font/orbitron"
        android:text="@string/menu"
        android:textColor="#CDDC39"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/ScienceButton"
        android:layout_width="252dp"
        android:layout_height="56dp"
        android:layout_marginTop="72dp"
        android:background="#97DC96"
        android:onClick="TestsMy"
        android:fontFamily="@font/orbitron"
        android:text="@string/tests"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,DuplicateClickableBoundsCheck" />

    <Button
        android:id="@+id/scienceButton3"
        android:layout_width="252dp"
        android:layout_height="52dp"
        android:layout_marginTop="56dp"
        android:background="#5BFF56"
        android:fontFamily="@font/orbitron"
        android:text="@string/articles"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ScienceButton"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,DuplicateClickableBoundsCheck" />

    <Button
        android:id="@+id/scienceButton4"
        android:layout_width="252dp"
        android:layout_height="56dp"
        android:layout_marginTop="48dp"
        android:background="#5BFF56"
        android:fontFamily="@font/orbitron"
        android:text="@string/calendar"
        android:onClick="CalendarPage"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scienceButton3"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,DuplicateClickableBoundsCheck" />

    <Button
        android:id="@+id/scienceButton5"
        android:layout_width="252dp"
        android:layout_height="56dp"
        android:layout_marginTop="52dp"
        android:background="#5BFF56"
        android:fontFamily="@font/orbitron"
        android:text="@string/settings"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scienceButton4"
        app:layout_constraintVertical_bias="0.006"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,DuplicateClickableBoundsCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>