<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#412442"
    tools:context=".Second_activity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#004C1157"
        android:fontFamily="@font/orbitron"
        android:text="@string/tests"
        android:textColor="#CDDC39"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="12dp"
        android:text="@string/level_easy"
        android:textColor="#B9EC7E"
        app:layout_constraintBottom_toTopOf="@+id/ScienceButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="8dp"
        android:text="@string/level_medium"
        android:textColor="#FF9800"
        app:layout_constraintBottom_toTopOf="@+id/scienceButton6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ScienceButton"
        app:layout_constraintVertical_bias="0.266" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="16dp"
        android:text="@string/level_hard"
        android:textColor="#FF5E52"
        app:layout_constraintBottom_toTopOf="@+id/scienceButton7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scienceButton6"
        app:layout_constraintVertical_bias="0.391" />

    <Button
        android:id="@+id/ScienceButton"
        android:layout_width="232dp"
        android:layout_height="134dp"
        android:layout_marginTop="64dp"
        android:background="#97DC96"
        android:fontFamily="@font/orbitron"
        android:text="@string/what_do_you_know_about_the_solar_system"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,DuplicateClickableBoundsCheck" />

    <Button
        android:id="@+id/scienceButton6"
        android:layout_width="232dp"
        android:layout_height="134dp"
        android:layout_marginTop="244dp"
        android:background="#97DC96"
        android:fontFamily="@font/orbitron"
        android:text="@string/guess_the_constellation"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,DuplicateClickableBoundsCheck" />

    <Button
        android:id="@+id/scienceButton7"
        android:layout_width="232dp"
        android:layout_height="134dp"
        android:layout_marginTop="444dp"
        android:background="#97DC96"
        android:fontFamily="@font/orbitron"
        android:text="What do you know about galaxies?"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,DuplicateClickableBoundsCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="98dp"
        android:layout_height="40dp"
        android:onClick="BackPage"
        android:text="Back"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />


</androidx.constraintlayout.widget.ConstraintLayout>